tests/baselines/reference/newNonReferenceType.js
//// [newNonReferenceType.ts]
var a = new any();
var b = new boolean(); // error


//// [newNonReferenceType.js]
var a = new any();
var b = new boolean(); // error
